manifests/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: monitoring
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/enforce: privileged #Required for node-exporter
  name: monitoring
spec:
  finalizers:
  - kubernetes
