manifests/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
  namespace: monitoring
spec:
  parentRefs:
    - kind: ListenerSet
      name: miniflux
      namespace: miniflux
  hostnames:
    - "miniflux.wcfm.me"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: miniflux
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
